--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <section>
+    <div id="header-about">
         <div class="container px-md py-md">
             <header>
                 <a href="#">
@@ -26,13 +26,42 @@
                     </a>
                 </nav>
             </header>
-            <section id="#about">
-                <div class="container px-lg py-lg">
-                    <div class="main">
-                        
+        </div>
+        <section id="about">
+            <div class="about container px-lg py-lg even-columns">
+                <div class="main">
+                    <img src="assets/images/Profile pic 176x176.png" alt="">
+                    <div>
+                        <h1>Isabela Torres</h1>
+                        <p>Amante de viagens, cultura e gastronomia. 🌍✈️ <br> 
+                        Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+                        </p>
                     </div>
                 </div>
-            </section>
+                <div class="info">
+                    <ul role="list">
+                        <li>São Paulo, Brazil</li>
+                        <li>37 países</li>
+                        <li>240 fotos</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section id="photo-gallery">
+        <div class="even-columns py-md px-md">
+            <img src="assets/images/Image 01.png" alt="">
+            <img src="assets/images/Image 02.png" alt="">
+            <img src="assets/images/Image 03.png" alt="">
+            <img src="assets/images/Image 04.png" alt="">
+            <img src="assets/images/Image 05.png" alt="">
+            <img src="assets/images/Image 06.png" alt="">
+            <img src="assets/images/Image 07.png" alt="">
+            <img src="assets/images/Image 08.png" alt="">
+            <img src="assets/images/Image 09.png" alt="">
+            <img src="assets/images/Image 10.png" alt="">
+            <img src="assets/images/Image 11.png" alt="">
+            <img src="assets/images/Image 12.png" alt="">
         </div>
     </section>
 </body>
