photo gallery pronto

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
     </div>
     <section id="photo-gallery">
-        <div class="even-columns py-md px-md">
+        <div class="container even-columns py-md px-md">
             <img src="assets/images/Image 01.png" alt="">
             <img src="assets/images/Image 02.png" alt="">
             <img src="assets/images/Image 03.png" alt="">
