--- a/index.html
+++ b/index.html
@@ -64,5 +64,14 @@
             <img src="assets/images/Image 12.png" alt="">
         </div>
     </section>
+    <footer>
+        <div class=" container even-columns px-lg py-md">
+            <span>Travelgram © 2024</span>
+            <div class="terms">
+                <a href="#">Termos de uso</a>
+                <a href="#">Política de privacidade</a>
+            </div>
+        </div>   
+    </footer>
 </body>
 </html>
